commit desde carpeta1

--- a/pagina.html
+++ b/pagina.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <h1>
-        Ventana para probar los repositorios
+        Ventana para probar los repositorios Ubicada en la carpeta 1
     </h1>
-    <p>
-        Este archivo esta en la carpeta2
-    </p>
 </body>
 </html>
